# sessy

./: CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-05-13-search-overhaul.md
docs/superpowers/specs/: 2026-05-13-search-overhaul-design.md
src/: app.rs  bookmarks.rs  export.rs  index.rs  lib.rs  main.rs  parser.rs  preview.rs  session.rs  text_cache.rs  ui.rs
tests/: search_integration.rs
tests/fixtures/: complex_session.jsonl  empty_session.jsonl  session_with_tickets.jsonl  simple_session.jsonl
