[package]
name = "sessy"
version = "0.2.3"
edition = "2024"
rust-version = "1.86"
description = "TUI session manager for Claude Code — browse, search, preview, and resume conversations"
license = "MIT"
repository = "https://github.com/pegiadise/sessy"
keywords = ["claude", "tui", "session", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
copypasta = "0.10"
fuzzy-matcher = "0.3"
dirs = "6"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
